[package]
name = "amqpr-api"
version = "0.3.0"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A tokio future based amqp api library"
repository = "https://github.com/AtsukiTak/amqp-api"
keywords = ["amqp", "rabbitmq"]
categories = ["network-programming", "asynchronous"]

[dependencies]
futures = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
bytes = "0.4"
log = "0.3"
error-chain = "0.11"

amqpr-codec = "0.2"

[dev-dependencies]
log4rs = "0.7"
